tests/test023.err
error: test023.tig:6:12: record type `t' does not contain a field `r'
