tests/test023.tig
/* ERR: unknown field */
let
  type t = {x: int}
  var x : t := nil
in
  printi(x.r)
end
